--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -2,8 +2,10 @@ FROM centos:latest
 MAINTAINER Giuseppe Scrivano <gscrivan@redhat.com>
 
 ADD atomic7-testing.repo /etc/yum.repos.d/
-RUN yum install -y git redhat-rpm-config bison rsync yum-utils gcc git autoconf automake which gtk-doc libtool libcap-devel attr parallel gjs make && yum-builddep -y ostree
-RUN git clone https://github.com/GNOME/gnome-desktop-testing.git
-RUN yum remove -y gjs
 ADD run.sh /run.sh
+ADD prepare.sh /prepare.sh
+
+RUN yum install -y git redhat-rpm-config bison rsync yum-utils gcc git autoconf automake which gtk-doc libtool libcap-devel attr parallel make && yum-builddep -y ostree && \
+    yum remove -y gjs && git clone https://github.com/GNOME/gnome-desktop-testing.git && /prepare.sh && yum clean all -y
+
 CMD /run.sh
