--- a/fedora/Dockerfile
+++ b/fedora/Dockerfile
@@ -1,6 +1,8 @@
 FROM fedora:latest
 MAINTAINER Giuseppe Scrivano <gscrivan@redhat.com>
 
+LABEL Version 1.0
+
 ADD run.sh /run.sh
 RUN dnf install -y redhat-rpm-config bison rsync yum-utils gcc git autoconf automake which gtk-doc libtool libcap-devel gnome-desktop-testing attr parallel gjs fuse-libs fuse-devel && yum-builddep -y ostree && yum clean all -y
 
