Add name and release label
Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/fedora/Dockerfile
+++ b/fedora/Dockerfile
@@ -1,6 +1,8 @@
 FROM fedora:latest
 MAINTAINER Giuseppe Scrivano <gscrivan@redhat.com>
 
+LABEL Name ostreetests
+LABEL Release 1.0
 LABEL Version 1.0
 
 ADD run.sh /run.sh
