--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -1,6 +1,8 @@
 FROM centos:latest
 MAINTAINER Giuseppe Scrivano <gscrivan@redhat.com>
 
+LABEL Name ostreetests
+LABEL Release 1.0
 LABEL Version 1.0
 
 ADD atomic7-testing.repo /etc/yum.repos.d/
